--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Quickるりまサーチ",
   "description": "迅速るりまサーチ検索",
   "version": "0.1",
+  "icons": {
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "permissions": [
     "contextMenus"
   ],
